<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvAutor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="13dp"
        android:layout_marginBottom="120dp"
        android:text="@string/autor"
        app:layout_constraintBottom_toTopOf="@+id/tvQtdBits"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/tvRA"
        app:layout_constraintHorizontal_bias="0.325"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.022" />

    <TextView
        android:id="@+id/tvRA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="142dp"
        android:text="@string/ra"
        app:layout_constraintBottom_toTopOf="@+id/etQtdBits"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvAutor"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etQtdBits"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="55dp"
        android:layout_marginEnd="55dp"
        android:layout_marginBottom="506dp"
        android:ems="10"
        android:hint="@string/bits"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvRA" />

    <TextView
        android:id="@+id/tvQtdBits"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/qtd_bits"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/etQtdBits"
        app:layout_constraintStart_toStartOf="@+id/etQtdBits"
        app:layout_constraintTop_toBottomOf="@+id/tvAutor" />

    <Spinner
        android:id="@+id/spUnidade"
        android:layout_width="302dp"
        android:layout_height="48dp"
        app:layout_constraintBottom_toTopOf="@+id/btnConverter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etQtdBits"
        app:layout_constraintVertical_bias="0.63" />

    <TextView
        android:id="@+id/tvConverterPara"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/unidadeFinal"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/spUnidade"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.178"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnConverter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="252dp"
        android:text="@string/converter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvResultado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnConverter" />

</androidx.constraintlayout.widget.ConstraintLayout>